nav no longer overlaps hamburger

--- a/final/styles/far-far.css
+++ b/final/styles/far-far.css
@@ -101,7 +101,7 @@ header {
     position: absolute;
     right: 0;
     z-index: 10;
-    margin-top: 100px;
+    margin-top: 145px;
     margin-right: 16px;
 }
 
@@ -113,7 +113,7 @@ header {
 
 .show li {
     display: block;
-    text-align: left;
+    text-align: center;
 
     padding: .2rem 0;
 }
@@ -129,7 +129,9 @@ header {
     font-weight: 700;
     line-height: 1;
 
-    color: var(--clr-secondary);
+    color: var(--clr-primary);
+    background-color: var(--clr-background);
+
     border: 2px solid var(--clr-secondary);
     border-radius: .5rem;
 
@@ -142,8 +144,9 @@ header {
 }
 
 #menu:hover:before {
-    color: var(--clr-background);
-    border-color: var(--clr-background);
+    /* color: var(--clr-background);
+    border-color: var(--clr-background); */
+    font-size: 2.5rem;
 }
 
 #menu.show::before {
